test/error/ptr_assign_class.gw
class C
{
	typedef void (test0)();
	function void test1(){};
	test1 @=> test0;
}
